<resources>
    <string name="app_name">Wisdom Thoughts</string>

     <!--Home Page String -->
    <string name="persian_language">فارسی</string>
    <string name="urdu_language">اردو</string>
    <string name="arabic_language">العربی</string>
    <string name="english_language">English</string>
    <string name="ActionBarText">WISDOM THOUGHTS</string>
    <string name="HomeSalawatText">اللھم صل علیٰ محمد وعلیٰ آل محمد</string>

    <!--Persion Categories -->

    <string name="Persian_RaftarBaMardom">برخورد با مردم</string>
    <string name="Persian_BakhodaBudan">با خدا بودن</string>
    <string name="Persian_KheirDoJahan"> خیر دو جهان</string>
    <string name="Persian_RastGuei">راستگويى و دروغگويى </string>
    <string name="Persian_SabrWaBordBari">بردباری و خشم</string>
    <string name="Persian_AdalatWaZolm">عدالت و ظلم</string>
    <string name="Persian_MominWAMonafiq">مؤمن و منافق</string>
    <string name="Persian_Sadaghe">صدقه</string>
    <string name="Persian_Himaqat">حماقت</string>
    <string name="Persian_Atr">عطر</string>
    <string name="Persian_BehatreenMardom"> بهترین و بدترین مردم </string>
    <string name="Persian_AkhlaghPassndide">اخلاق پسنديده </string>
    <string name="Persian_Khanewadeh"> الگوی خانواده</string>
    <string name="Persian_DidObazdid">ديد و بازديد</string>
    <string name="Persian_Adab"> آدابِ ادب</string>
    <string name="Persian_Behdasht">بـهداشـت </string>
    <string name="Persian_IslaheJame">اصلاح جامعه</string>
    <string name="Persian_jawan">جوان</string>
    <string name="Persian_AqloAaqel">عقل و عاقل</string>
    <string name="Persian_DahanWaKhushbu"> دهانى خوشبو</string>

    <!--English Categories -->
    <string name="English_Ambition">Ambition</string>
    <string name="English_Authority">Authority</string>
    <string name="English_Ablution">Ablution</string>
    <string name="English_Anger">Anger</string>
    <string name="English_Merit">Merit</string>
    <string name="English_Marriage">Marriage</string>
    <string name="English_Martyrdom">Martyrdom</string>
    <string name="Egnlish_Backbiting">Backbiting</string>
    <string name="Egnlish_Blessing">Blessing</string>
    <string name="Egnlish_Neighbour">Neighbour</string>
    <string name="Egnlish_Regret">Regret</string>
    <string name="Egnlish_Rights">Rights</string>
    <string name="Egnlish_Clothing">Clothing</string>
    <string name="Egnlish_Charity">Charity</string>
    <string name="Egnlish_Heart">Heart</string>
    <string name="Egnlish_Comfort">Comfort</string>
    <string name="Egnlish_Hope">Hope</string>
    <string name="Egnlish_Hell">Hell</string>
    <string name="Egnlish_Cleanliness">Cleanliness</string>
    <string name="Egnlish_Hereafter">Hereafter</string>

    <!--Arabic Categories -->
    <string name="Arabic_Yateem">الیتیم</string>
    <string name="Arabic_Yaqeen">الیقین</string>
    <string name="Arabic_Yaas">الیأس</string>
    <string name="Arabic_Reshweh">الرّشوة </string>
    <string name="Arabic_Rahbani">الرّهبانیّة</string>
    <string name="Arabic_Riazah">الرّیاضة</string>
    <string name="Arabic_Siasat">السیاسة</string>
    <string name="Arabic_Istema">الاستماع </string>
    <string name="Arabic_tasweef">التسویف</string>
    <string name="Arabic_Tamalloq">التَّمَلُّق‏ </string>
    <string name="Arabic_Moat">الموت‏</string>
    <string name="Arabic_Makr">المَكر</string>
    <string name="Arabic_Mezah">المِزاح‏ </string>
    <string name="Arabic_Maraz">المرض</string>
    <string name="Arabic_Naom">النوم</string>
    <string name="Arabic_Nas">الناس</string>
    <string name="Arabic_Nefaq">النفاق</string>
    <string name="Arabic_Insaf">الإنصاف</string>
    <string name="Arabic_Kebr">الكِبر</string>
    <string name="Arabic_Sadaqah">الصّدقة</string>

    <!--urdo categories-->
    <string name="Urdu_HaqqoNas">حق الناس</string>
    <string name="Urdu_HaramKamTarkKarna"> حرام کام ترک کرنے کی اہمیت</string>
    <string name="Urdu_Roza">روزہ</string>
    <string name="Urdu_Ibadat">خدا کی عبادت</string>
    <string name="Urdu_Tarbiayt">تعلیم و تربیت</string>
    <string name="Urdu_Toba">توبه</string>
    <string name="Urdu_ZabankiHifazat">زبان کی حفاظت</string>
    <string name="Urdu_SilaheRehem">صله رحم</string>
    <string name="Urdu_MotOrAkherat">موت اور آخرت</string>
    <string name="title_activity_show_hadith">ShowHadithActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>



</resources>
