<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical">

    <RelativeLayout style="@style/HomeActionBarRelaytiveLayout">

        <TextView
            android:id="@+id/home_actionBar_textView"
            style="@style/HomeActionBarTextView" />

    </RelativeLayout>

    <ScrollView
        style="@style/CategoryScrollAndLinearLayoutMainStyle"
        android:layout_gravity="center">

        <LinearLayout
            style="@style/CategoryScrollAndLinearLayoutMainStyle"
            android:orientation="vertical">

            <LinearLayout style="@style/CategoryLinearLayoutStyle">

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Yateem" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Yaqeen" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Yaas" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Reshweh" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Rahbani" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Riazah" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Siasat" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Istema" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_tasweef" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Tamalloq" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Moat" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Makr" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Mezah" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Maraz" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Naom" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Nas" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Nefaq" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Sadaqah" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Kebr" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Arabic_Insaf" />

                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
