<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_home_background"
    android:orientation="vertical">

    <RelativeLayout style="@style/HomeActionBarRelaytiveLayout">

        <TextView
            android:id="@+id/home_actionBar_textView"
            style="@style/HomeActionBarTextView" />

    </RelativeLayout>

    <ScrollView
        style="@style/CategoryScrollAndLinearLayoutMainStyle"
        android:layout_gravity="center">

        <LinearLayout
            style="@style/CategoryScrollAndLinearLayoutMainStyle"
            android:orientation="vertical">

            <LinearLayout style="@style/CategoryLinearLayoutStyle">

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickAmbition" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:onClick="onClickAmbition"
                        android:text="@string/English_Ambition" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/English_Authority" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/English_Anger" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/English_Ablution" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/English_Merit" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/English_Marriage" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/English_Martyrdom" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/English_Martyrdom" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Backbiting" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Blessing" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Neighbour" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Regret" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Rights" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Clothing" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Charity" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Heart" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Comfort" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Hope" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Hell" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Cleanliness" />

                </RelativeLayout>
                <RelativeLayout
                    style="@style/HomeButtonsRelaytiveLayout"
                    android:layout_gravity="center">

                    <ImageView
                        style="@style/CategoryImageViewStyle"
                        android:onClick="onClickEnglish" />

                    <TextView
                        style="@style/CategoryTextViewStyle"
                        android:text="@string/Egnlish_Hereafter" />

                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
